# app/Http/Controllers/API/V1/CycleController.php
@@ -219,7 +219,7 @@ class CycleController extends Controller
     * @OA\Put(
     *   path="/api/v1/cycles/{id}",
     *   summary="Edit a cycle",
-    *   tags={"Roles"},
+    *   tags={"Cycles"},
     *   @OA\Parameter(
     *       name="id",
     *       description="Cycle ID",
@@ -236,6 +236,15 @@ class CycleController extends Controller
     *       required=true,
     *       @OA\Schema(
     *           type="string"
+    *       )
+    *   ),
+    *   @OA\Parameter(
+    *       name="department_id",
+    *       in="query",
+    *       description="Department ID",
+    *       required=true,
+    *       @OA\Schema(
+    *           type="integer"
     *       )
     *   ),
     *   @OA\Parameter(
@@ -274,11 +283,11 @@ class CycleController extends Controller
     public function update(Request $request, Cycle $cycle)
     {
         $cycle->name = $request['name'];
-        $cycle->updated_at = now();
         $cycle->department_id = $request['department_id'];
 
         $updated = $cycle->save();
         if($updated) {
+            $cycle->modules()->sync($request['modules']);
             return response()->json(['cycle'=>$cycle])->setStatusCode(Response::HTTP_CREATED);
         } else {
             return response()->json(['cycle'=>$cycle])->setStatusCode(Response::HTTP_BAD_REQUEST);
